--- a/cart.html
+++ b/cart.html
@@ -93,7 +93,7 @@
                                 <div class="cart-item col-2">金額</div>
                             </div>
                         </div>
-                        <!-- <div class="cart-list">
+                        <div class="cart-list">
                             <div class="row">
                                 <div class=" cart-item col-lg-6 d-flex name">
                                     <div class="cart_img">
@@ -124,10 +124,10 @@
                                     <a href="#">移除</a>
                                 </div>
                                 <div class="cart-item col-6 subtotal">
-                                    TWD <span class="value"></span>
+                                    TWD <span class="value">0</span>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
                     <div class="col-12">
                         <div class="total_bar">
