--- a/registered.html
+++ b/registered.html
@@ -63,10 +63,10 @@
                         <a href="index.html"><img src="img/newlogo2.png" alt=""></a>
                     </div>
                     <div class="navbar d-lg-flex col-lg-9 col-0 collapse" id="navbarMoblie">
-                        <ul class="Language container">
-                            <li><a href="index.html" class="active">繁體中文</a></li>
-                            <li><a href="#">日本語</a></li>
-                            <li><a href="#">English</a></li>
+                        <ul class="Language container list-group">
+                            <li><a href="index.html" class="active" data-toggle="list">繁體中文</a></li>
+                            <li><a href="#" data-toggle="list">日本語</a></li>
+                            <li><a href="#" data-toggle="list">English</a></li>
                         </ul>
                         <ul class="container navbar-zh" id="navbarMain">
 
@@ -179,10 +179,11 @@
             </div>
 
         </div>
+        <div class="footer">
+        </div>
     </div>
 
-    <div class="footer">
-    </div>
+
 
 
 
