--- a/cart.html
+++ b/cart.html
@@ -63,10 +63,10 @@
                         <a href="index.html"><img src="img/newlogo2.png" alt=""></a>
                     </div>
                     <div class="navbar d-lg-flex col-lg-9 col-0 collapse" id="navbarMoblie">
-                        <ul class="Language container">
-                            <li><a href="cart.html" class="active">繁體中文</a></li>
-                            <li><a href="#">日本語</a></li>
-                            <li><a href="#">English</a></li>
+                        <ul class="Language container list-group">
+                            <li><a href="cart.html" class="active" data-toggle="list">繁體中文</a></li>
+                            <li><a href="#" data-toggle="list">日本語</a></li>
+                            <li><a href="#" data-toggle="list">English</a></li>
                         </ul>
                         <ul class="container navbar-zh" id="navbarMain">
 
@@ -136,7 +136,7 @@
                             </div>
                             <div class="total_item">
                                 <p>總金額</p>
-                                <h3 class="total">TWD <span class="value" >0</span></h3>
+                                <h3 class="total">TWD <span class="value">0</span></h3>
                             </div>
                             <div class="total_item">
                                 <div class="btn">
@@ -148,9 +148,10 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+        </div>
     </div>
-    <div class="footer">
-    </div>
+
 
 
 
