--- a/cart.html
+++ b/cart.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="wrap" style="background-color:#f3f3f1">
-        <div class="wrap-shadows d-lg-none" style="display: none;">
+        <div class="wrap-shadows d-lg-none collapse">
         </div>
         <div class="login_bar modal fade">
             <div class="modal-dialog modal-dialog-centered justify-content-center">
@@ -354,9 +354,6 @@
 
         var lists = document.querySelectorAll('.cart-list');
 
-        if (lists.length >= 1) {
-            cart();
-        }
 
         function cart() {
             var add = document.querySelectorAll('.add');
@@ -395,6 +392,9 @@
             };
         }
 
+        if (lists.length >= 1) {
+            cart();
+        }
     </script>
 </body>
 
