--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="wrap">
-        <div class="wrap-shadows d-lg-none" style="display: none;">
+        <div class="wrap-shadows d-lg-none collapse">
         </div>
         <p></p>
         <div class="login_bar modal fade">
