--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
 
 
     <div class="wrap">
-        <div class="wrap-shadows d-lg-none" style="display: none;">
+        <div class="wrap-shadows d-lg-none collapse">
         </div>
         <div class="login_bar modal fade">
             <div class="modal-dialog modal-dialog-centered justify-content-center">
