--- a/registered.html
+++ b/registered.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="wrap" style="background-color:#f3f3f1">
-        <div class="wrap-shadows d-lg-none" style="display: none;">
+        <div class="wrap-shadows d-lg-none collapse">
         </div>
         <div class="login_bar modal fade">
             <div class="modal-dialog modal-dialog-centered justify-content-center">
